@@ -100,11 +100,11 @@ public class TestPrepareStatement
 		ResultSet results = prepstmt.executeQuery();
 
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(1), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(1), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(2), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(2), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(3), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(3), results.getObject("id"));
 		assertFalse(results.next());
 	}
 
@@ -242,7 +242,7 @@ public class TestPrepareStatement
 
 		assertTrue(results1.isClosed());
 		assertTrue(results2.next());
-		assertEquals("Integer column ID is wrong", new Integer(41), results2.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(41), results2.getObject("id"));
 		assertFalse(results2.next());
 	}
 
@@ -260,24 +260,24 @@ public class TestPrepareStatement
 		ResultSet results = prepstmt.executeQuery();
 		
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(1), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(1), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(3), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(3), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(4), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(4), results.getObject("id"));
 		assertFalse(results.next());
 		
 		prepstmt.setString(1, "Office Employee");
 		results = prepstmt.executeQuery();
 		
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(6), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(6), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(7), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(7), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(8), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(8), results.getObject("id"));
 		assertTrue(results.next());
-		assertEquals("Integer column ID is wrong", new Integer(9), results.getObject("id"));
+		assertEquals("Integer column ID is wrong", Integer.valueOf(9), results.getObject("id"));
 		assertFalse(results.next());
 	}
 
